FINALLY, ITS DECENT ENOUGH

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,52 +1,47 @@
 <!DOCTYPE html>
+{% extends "website_base.html" %}
 {% load static %}
 {% load i18n %}
 <html>
-  <head>
-    <title>My Website</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/website_base.css' %}">
 
-  </head>
+    <link rel="stylesheet" href="{% static 'css/contact.css' %}" >
 
-  <body>
-      <header id="mainHeader">
-          <div class="container">
-            <h1>>{% trans "UniCities" %}</h1>
-          </div>
-        </header>
-    
-        <div class="container" id="navBar">
-          <a href="{% url 'home' %}">{% trans "Home" %}</a>
-          <a href="{% url 'ptv' %}">{% trans "Places to Visit" %}</a>
-          <a href="{% url 'food' %}">{% trans "Food" %}</a>
-          <a class="active" href="{% url 'transport' %}">{% trans "Transport" %}t</a>
-          <a href="{% url 'contact' %}">{% trans "Contact Us" %}</a>
+
+  {% block content %}
+      
+    <div id="container">
+        <div class="heading"><h1>Contact Us</h1></div>
+        <div class="content">
+          <form name="contactForm" onsubmit="return formValidation()">
+                <fieldset>
+                        <i>{% trans "* must be filled out" %}</i><br>
+                        <label>{% trans " First Name:" %}<input type="text" name="fname" required></label><br>
+                        <label>{% trans "Last Name: " %} <input type="text" name="lname" required></label><br>
+                        <label>{% trans "Email*:" %}  <input type="email" id="email" required></label><br><br>
+                        <label>{% trans " Male:" %} <input type="radio" name="gender" checked></label><br>
+                        <label>{% trans " Female:" %} <input type="radio" name="gender"></label><br><br>
+                        <label>{% trans "Continent:" %} 
+                            <select>
+                                <option value="EUR">{% trans "Europe" %} </option>
+                                <option value="USA">{% trans "America" %} ></option>
+                                <option value="Asia">{% trans "Asia" %</option>
+                                <option value="AUST">{% trans "Australia" %}</option>
+                            </select>
+                        </label><br><br>
+                        <label>{% trans " Message:" %}<br> 
+                            <textarea placeholder="Write your comment here...." id="message"></textarea>
+                        </label>
+                        <label>{% trans "Where did you hear about this website?" %} <br>
+                            <input type="checkbox" name="checkbox" value="friend" checked> {% trans "Friend/ Word of mouth" %} 
+                            <input type="checkbox" name="checkbox" value="websites" > {% trans "Other websites" %} <br>
+                            <input type="checkbox" name="checkbox" value="ad" >{% trans "Advertisement" %} 
+                            <input type="checkbox" name="checkbox" value="tv" >{% trans "TV" %} <br>
+                        </label>
+                        <input type="submit" value="Submit" style="float:right">
+                    
+              </fieldset>
+            </form>
         </div>
-    
-    
-
-  <div class="slideShowC">
-
-    <div class="slideShow fade">
-      <img src="ContactUs.png">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
-
-  </div>
-<!--
-    <div class="container">
-      <section id="main">
-        <h1>Welcome</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      </section>
-      <aside id="sideBar">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      </aside>
-    </div>-->
-
-    <footer id="mainFooter">
-      <p>Copyright &copy; 2018 My Website</p>
-    </footer>
-
-  </body>
+  {% endblock content %}
 </html>
