--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,66 +1,7 @@
 
-/*
-#showcase img{
-  width: 40%;
-}
-
-#showcase h1{
-  width: 40%;
-  text-align: left;
-}
-*/
-
-.slideShowC {
-  max-width: 90%;
-  min-width: 600px;
+.carousel {
+  width: 50%;
   margin: auto;
-  margin-top: 10px;
-  overflow: hidden;
-}
-
-.slideShow{
-  display: block;
-}
-
-.slideShow img{
-  width: 46%;
-  height: 100%;
-  display: block;
-  float: left;
-  margin: 2%;
-  border-radius: 10px;
-}
-
-.slideShow p {
-  width: 46%;
-  display: block;
-  float: right;
-  margin: 2%;
-}
-
-.prev, .next{
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-
-}
-
-.next{
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-.fade{
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
 }
 
 @-webkit-keyframes fade{
